include_directories(${MoDELibRootDir}/include/Utilities/)
add_library(MoDELibDDD 
	STATIC 
	DislocationLocalReference.cpp
	DefectiveCrystalParameters.cpp
		ConfinedDislocationObject.cpp
		DefectiveCrystal.cpp
		DislocationNetwork.cpp
		DislocationGlideSolver.cpp
		DislocationNode.cpp
		DDtimeIntegrator.cpp
		DislocationSegment.cpp
		DislocationLoop.cpp
		DislocationLoopLink.cpp
		DislocationLoopNode.cpp
		DislocationNetworkRemesh.cpp
		DislocationCrossSlip.cpp
		DislocationMobilityBase.cpp
		DislocationMobilityBCC.cpp
		DislocationMobilityFCC.cpp
		DislocationMobilityHEXbasal.cpp
		DislocationMobilityHEXprismatic.cpp
		DislocationMobilityHEXpyramidal.cpp
		EshelbyInclusion.cpp
		ExternalLoadControllerBase.cpp
		GlidePlane.cpp

			)

